--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /
   - title: "Research"
     url: /research/
-  - title: "Technical notes"
+  - title: "Technical Notes"
     url: /technical_notes/
   - title: "CV"
     url: https://yabramuvdi.github.io/files/CV.pdf
