--- a/_config.yml
+++ b/_config.yml
@@ -107,10 +107,10 @@ author:
   bio              : "*Something* <br>
                       *Something more*
                       "
-  #location         : "Somewhere in the world"
+  #location         : "Washington, DC"
   #email            : ""
-  github           : "xxxxx"
-  linkedin         : "xxxxxx"
+  github           : "jleondia.github.io"
+  linkedin         : "John Leon Diaz"
   # links:
   #   - label: "Resume"
   #     icon: "far fa-fw fa-file-pdf"
