--- a/_config.yml
+++ b/_config.yml
@@ -108,8 +108,8 @@ author:
                       *Something more*
                       "
   #location         : "Washington, DC"
-  #email            : ""
-  github           : "jleondia.github.io"
+  #email            : "johnjairol at iadb.org"
+  github           : "jleondia"
   linkedin         : "John Leon Diaz"
   # links:
   #   - label: "Resume"
