--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "John León-Díaz"
-  avatar           : "/images/robot.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/4Q8A5187 - Copy.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "*Something* <br>
                       *Something more*
                       "
