--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   #location         : "Washington, DC"
   #email            : "johnjairol at iadb.org"
   github           : "jleondia"
-  linkedin         : "John Leon Diaz"
+  linkedin         : "john-leon-diaz-93105613b"
   # links:
   #   - label: "Resume"
   #     icon: "far fa-fw fa-file-pdf"
