--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,8 @@ analytics:
 author:
   name             : "John León-Díaz"
   avatar           : "/images/4Q8A5187 - Copy.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "*Something* <br>
-                      *Something more*
+  bio              : "*Economist at IADB* <br>
+                      *PhD. University of Maryland*
                       "
   location         : "Washington, DC"
   email            : "johnjairol at iadb.org"
