--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   name             : "John León-Díaz"
   avatar           : "/images/4Q8A5187 - Copy.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "*Economist at IADB* <br>
-                      *PhD. University of Maryland*
+                      *Ph.D. University of Maryland*
                       "
   location         : "Washington, DC"
   email            : "johnjairol at iadb.org"
