--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "John León-Díaz"
   avatar           : "/images/4Q8A5187 - Copy.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "*Economist at IADB* <br>
+  bio              : "*Economist at Inter-American Development Bank* <br>
                       *Ph.D. University of Maryland*
                       "
   location         : "Washington, DC"
