--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,4 +7,4 @@ main:
   - title: "Technical Notes"
     url: /technical_notes/
   - title: "CV"
-    url: https://jleondia.github.io/files/CV_JLeon_Apr2024.pdf
+    url: https://jleondia.github.io/files/CV_JLEON.pdf
